=====================
Django MPTT CHANGELOG
=====================

.. contents::

Trunk Changes
=============

Version 0.2.1
=============

Quick fix for installation with ``setup.py``.

Version 0.2
===========

Packaged from revision 88 in Subversion.

Tue 15th Jan, 2008
------------------

* Added ``order_insertion_by`` argument to ``mptt.register`` and
  implemented automatic ordering in ``pre_save`` when this argument was
  given for the ``Model`` class of the node being saved.

* Updated ``signals.pre_save()`` to use ``Model.insert_at()``.

* Added an ``insert_at()`` convenience method to ``Model`` instances.

* Added an ``insert_node()`` method to ``TreeManager`` for positioning
  of nodes which haven't yet been inserted into the database.

Sat 12th Jan, 2008
------------------

* BACKWARDS-INCOMPATIBLE CHANGE - model registration is now handled by
  ``mptt.register`` instead of ``mptt.models.treeify``.

* An exception is now raised if you call ``treeify`` on the same
  ``Model`` class twice.

Thu 10th Jan, 2008
------------------

* Documented ``MoveNodeForm`` in ``docs/forms.txt``.

* Added a ``target_select_size`` argument to ``MoveNodeForm``.

* Added a ``root_node()`` method to ``TreeManager``.

* Added ``get_root()`` method to ``Model`` instances.

* The ``tree_info`` template filter now accepts an optional argument to
  specify other tree structure information which should be made
  available.

* Added a ``tree_path`` template filter.

Wed 9th Jan, 2008
-----------------

* Split documentation into multiple files.

* Created ``mptt.forms``, with ``MoveNodeForm``.

* Removed ``mptt.queries`` - the functionality it could be used to
  manually implement is now provided by a new ``add_related_count()``
  method in ``TreeManager``.

* Tree attributes are now held to ``Model`` class' ``Options``
  (i.e. ``_meta``). This allowed a lot of refactoring, as these
  attributes no longer need to be passed around or taken from the
  class' ``TreeManager``.
